--- a/loader/wine.inf.in
+++ b/loader/wine.inf.in
@@ -6131,6 +6131,7 @@ HKCU,Software\Wine\DllOverrides,"winemenubuilder.exe",0x2,""
 
 [LutrisClient.ntamd64]
 HKCU,Software\Wine\AppDefaults\LauncherPatcher.exe,"Version",,"win7"
+HKCU,Software\Wine\AppDefaults\tll.exe\DllOverrides,"amd_ags_x64",0x2,"builtin"
 HKCU,Software\Wine\AppDefaults\Deathloop.exe\DllOverrides,"amd_ags_x64",0x2,"builtin,native"
 HKCU,Software\Wine\AppDefaults\ForzaHorizon4.exe\DllOverrides,"amd_ags_x64",0x2,"builtin,native"
 HKCU,Software\Wine\AppDefaults\NewColossus_x64vk.exe\DllOverrides,"amd_ags_x64",0x2,"builtin,native"
